# Utils

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md  build.sh
apps/: CMakeLists.txt  app.cpp
benchmark/: BaseBenchmarks.cpp  CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile
include/: Assert.hpp  BaseEncryption.hpp  CThread.h  Exception.h  ExecutionThread.hpp  FileEncryption.hpp  FileSystemUtils.h  JsonUtils.hpp  Logging.hpp  Settings.hpp  Stopwatch.h  StringUtils.hpp  assert.hpp  cThread.h
include/Log/: ILogger.hpp  LogEntry.hpp  LoggerConsole.hpp  Logging.hpp
src/: BaseEncryption.cpp  CMakeLists.txt  CThread.cpp  ExecutionThread.cpp  FileSystemUtils.cpp  Logging.cpp  Settings.cpp  StringUtils.cpp  cThread.cpp
src/Log/: LogEntry.cpp  LoggerConsole.cpp  Logging.cpp
tests/: CMakeLists.txt  testlib.cpp
